--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition = "2021"
 description = "A simple library to execute commands"
 repository = "https://github.com/krazijames/execute-command"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 
 [dependencies]
 shell-words = "1.1"
