--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Test
         run: cargo test
 
-  publish:
-    name: Publish
+  release:
+    name: Release
     if: startsWith(github.ref, 'refs/tags/v')
     needs: test
     runs-on: ubuntu-latest
@@ -46,6 +46,33 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Get version
+        run: echo VERSION=$(./version.sh) >> $GITHUB_ENV
+
+      - name: Check version
+        run: |
+          if [ $VERSION != ${GITHUB_REF_NAME#v} ]; then
+            echo "$VERSION != ${GITHUB_REF_NAME#v}"
+            exit 1
+          fi
+
+      - name: Get release note
+        run: |
+          echo "RELEASE_NOTE<<EOF" >> $GITHUB_ENV
+          ./release-note.sh $VERSION >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      - name: Release
+        uses: ncipollo/release-action@v1
+        with:
+          name: ${{ github.ref_name }}
+          body: ${{ env.RELEASE_NOTE }}
+          allowUpdates: true
+          omitNameDuringUpdate: true
+          omitBodyDuringUpdate: true
+          omitPrereleaseDuringUpdate: true
+          omitDraftDuringUpdate: false
 
       - name: Publish
         run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
